# my-python-skeletons

./: .gitignore  README.md
2020/: README.md
2020/msa/: README.md
2020/msa/srvs/svr/: supervisord.conf
2020/plain/: README.md  main.py  noxfile.py  pyproject.toml
2020/plain/hello/: __init__.py  concat.py  hello.py  types.py
bazel-mono/: README.md
bdd-example/: pyproject.toml
bdd-example/features/: juice.feature
bdd-example/features/steps/: juice_step.py
home.d/: setup.sh
home.d/local/aerospace/: aerospace.toml
home.d/local/wezterm/: wezterm.lua  zshrc-wezterm
mono-py-pyprj/libs/one/: pyproject.toml
mono-py-pyprj/libs/one/one/: __init__.py
mono-py-pyprj/pkgs/some/: pyproject.toml
mono-py-pyprj/pkgs/some/some/: __init__.py
mono-py-pyprj/pkgs/some/tests/: call_test.py
terminal-slides/: REAME.md  slides-demo.md
yaml-oas/jsonnet/: Makefile  oas-doc.go
yaml-oas/jsonnet/components/: schema.yaml  todo.yaml
yaml-oas/jsonnet/paths/: todo.yaml
