[tool.poetry]
name = "bdd-example"
version = "0.1.0"
description = "bdd examples"
authors = ["YooWaan"] 

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
PyHamcrest = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
