[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["YooWaan"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
bandit = "^1.7.0"
mypy = "^0.790"
nox = "^2020.12.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
